<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_accueil"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_commerces"
            android:icon="@drawable/ic_commerces"
            android:title="@string/menu_commerces" />
        <item
            android:id="@+id/nav_reseaux"
            android:icon="@drawable/ic_social"
            android:title="@string/menu_reseaux" />
        <item
            android:id="@+id/nav_pub"
            android:icon="@drawable/ic_pub"
            android:title="@string/menu_pub" />
        <item
            android:id="@+id/nav_parametre"
            android:icon="@drawable/ic_parametre"
            android:title="@string/menu_param" />
    </group>



</menu>
